# ros2_ws_robot

./: .gitignore  .gitmodules  test.py
src/audio_player/: package.xml  setup.py
src/audio_player/audio_player/: audio_player_node.py
src/battery_manager/: package.xml  setup.py
src/battery_manager/battery_manager/: battery_manager_node.py
src/debug/: package.xml  setup.py
src/debug/debug/: autonomus_step_0.py  autonomus_step_1.py  camera_sampler_node.py  frame_test.py  imu_control_node.py  imu_motion_test.py  imu_pid_motion_node.py  lane_follow_node.py  lane_info_viewer.py  motor_calibration_node.py  straight_drive_node.py
src/lane_centerline_cpp/: CMakeLists.txt  package.xml
src/lane_centerline_cpp/src/: lane_centerline_node.cpp
src/lane_inference/: package.xml  setup.cfg  setup.py
src/lane_inference/lane_inference/: lane_centerline_node.py  lane_mask_node.py
src/lane_pose/: package.xml  setup.cfg  setup.py
src/lane_pose/lane_pose/: lane_pose_node.py
src/mobile_com/: package.xml  setup.cfg  setup.py
src/mobile_com/mobile_com/: mobile_com_node.py
src/motor_driver/: CMakeLists.txt  package.xml
src/motor_driver/src/: motor_driver_node.cpp
src/neopixel_uart/: package.xml  setup.cfg  setup.py
src/neopixel_uart/neopixel_uart/: neopixel_uart_node.py
src/pico_com/: package.xml  setup.cfg  setup.py
src/pico_com/pico_com/: pico_com_node.py
src/robot_bringup/: package.xml
src/robot_bringup/launch/: robot_bringup.launch.py
src/servo_driver/: CMakeLists.txt  package.xml
src/servo_driver/src/: servo_driver_node.cpp
src/waveshare_lcd/: CMakeLists.txt  package.xml
src/waveshare_lcd/src/: lcd_node.cpp
