<?xml version="1.0"?>
<package format="3">
  <name>lane_centerline_cpp</name>
  <version>0.0.1</version>
  <description>Fast C++ lane centerline node compatible with lane_inference outputs.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
